<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/color_picker"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="15sp"
    android:background="@drawable/dialog_bg"
    >
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/purple_200"
        android:layout_gravity="end"
        android:layout_margin="5sp"
        android:src="@drawable/palette_btn"
        android:contentDescription="@string/purple" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/black"
        android:layout_margin="5sp"
        android:layout_gravity="end"
        android:src="@drawable/palette_btn"
        android:contentDescription="@string/black" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/indigo"
        android:layout_gravity="end"
        android:layout_margin="5sp"
        android:src="@drawable/palette_btn"
        android:contentDescription="@string/indigo" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/blue"
        android:layout_gravity="end"
        android:layout_margin="5sp"
        android:src="@drawable/palette_btn"
        android:contentDescription="@string/blue"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/green"
        android:layout_gravity="end"
        android:layout_margin="5sp"
        android:src="@drawable/palette_btn"
        android:contentDescription="@string/green"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/yellow"
        android:layout_gravity="end"
        android:layout_margin="5sp"
        android:src="@drawable/palette_btn"
        android:contentDescription="@string/yellow"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/orange"
        android:src="@drawable/palette_btn"
        android:layout_gravity="end"
        android:layout_margin="5sp"
        android:contentDescription="@string/orange"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/red"
        android:layout_gravity="end"
        android:layout_margin="5sp"
        android:src="@drawable/palette_btn"
        android:contentDescription="@string/red"
        />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_borderless"
        android:backgroundTint="@color/white"
        android:layout_gravity="end"
        android:layout_margin="5sp"
        android:src="@drawable/palette_erase"
        android:contentDescription="@string/white"
        />
</LinearLayout>