<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<FrameLayout
    android:id="@+id/frameLayout"
    android:layout_width="0sp"
    android:layout_height="0sp"
    android:padding="1dp"
    android:background="@drawable/background_drawable"
    app:layout_constraintBottom_toTopOf="@id/palette"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:src="@drawable/eiffel"
        android:contentDescription="@string/background_image"
        />
    <com.example.drawingappforkids.DrawingView
        android:id="@+id/drawingCanvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"/>
</FrameLayout>

    <LinearLayout
        android:id="@+id/palette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10sp"
        android:gravity="center"
        >
            <ImageButton
                android:id="@+id/brush_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:contentDescription="@string/button_to_choose_brush"
                android:padding="8sp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_brush_24"
                android:layout_marginEnd="10sp"
                />

        <ImageButton
            android:id="@+id/palette_slct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:src="@drawable/ic_baseline_palette_24"
            android:scaleType="fitXY"
            android:padding="5sp"
            android:contentDescription="@string/palette"
            android:layout_marginEnd="10sp"
            />
        <ImageButton
            android:id="@+id/backgroundImageSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_image_24"
            android:background="@drawable/button_bg"
            android:contentDescription="@string/button_to_choose_image_from_gallery"
            android:layout_marginEnd="10sp"
            />
        <ImageButton
            android:id="@+id/undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_undo_24"
            android:background="@drawable/button_bg"
            android:contentDescription="@string/undo_button"
            android:layout_marginEnd="10sp"
            />
        <ImageButton
            android:id="@+id/redo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_redo_24"
            android:background="@drawable/button_bg"
            android:contentDescription="@string/redo_button"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>